# EDITORIAL_IA

./: .gitignore  AGENTS.md  CHANGELOG.md  ESTADO_PROYECTO.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS
AGENTS/: AGENTS.md
AUTOMATIZACIONES/: AGENTS.md
CHECKLISTS/: GOB-02_votacion.md  OPS-04_personajes.md  OPS-05_mundos.md
DOCUMENTACION_FUENTE/: arquitectura-editorial-ia-v2.docx  inventario-inicial.md
DOCUMENTACION_TECNICA/: infraestructura-agentes.md
INFORMES/: AUDITORIA_FASE_INICIAL.md  dashboard.md  informe-agentes-gobierno.md  informe-descomposicion-arquitectura-v2.md  informe-paso-09-infraestructura-agentes.md  informe-prueba-piloto-001.md  metricas_comerciales.md  metricas_globales.md
LIBROS/: AGENTS.md
MANUAL/: AGENTS.md  ARQUITECTURA_SISTEMA.md  CONSTITUCION.md  GLOSARIO.md
MEMORIA/: AGENTS.md  conocimientos_acumulados.md  decisiones_editoriales.md  errores_historicos.md  estilo_autor.md  mejores_practicas.md
PLANTILLAS/: biblia_mundo.md  brief.md  brief_infografia.md  checklist-agente.md  contrato-entrada-agente.md  contrato-salida-agente.md  ficha_ejercicio.md  ficha_metafora.md  ficha_personaje.md  ficha_sistema.md  informe-error.md  informe-rechazo.md  informe_comercial.md  registro-decision.md  votacion-consejo.schema.json
PROMPTS/: AGENTS.md
REGLAS/: formato_commits.md  prohibiciones_lexicas.md  slas.md  umbrales_calidad.md  umbrales_comerciales.md
TEST/: AGENTS.md
WORKFLOWS/: AGENTS.md  flujo_educativo.md  flujo_ficcion.md  flujo_general.md  flujo_no_ficcion.md  flujo_terapeutico.md
(+124 files in other folders)
